<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pizza-Point</string>
    <string name="enjoy">Enjoy Your</string>
    <string name="food">Food</string>
    <string name="welcome">Welcome To Pizza Point</string>
    <string name="great">Enjoy Your Food And Have Great Time</string>
    <string name="started">Get Started </string>
    <string name="Menu">Menu</string>
    <string name="chef"> Our Chefs Are</string>
    <string name="john">John</string>
    <string name="smith">Smith</string>
    <string name="micheal">Micheal</string>
    <string name="marsh">Marsh</string>
    <string name="foods">Available Food</string>
    <string name="pizza">Pizza</string>
    <string name="Promotion">Promotions</string>
    <string name="today">Today-s Offer</string>
    <string name="fries">Free Box Of Fries</string>
    <string name="on">On all Orders above $200</string>
    <string name="popular">Popular</string>
    <string name="beef">Beef-burger</string>
    <string name="price">150</string>
    <string name="rate">3.4</string>
    <string name="next">Next</string>
    <string name="order">Order Now</string>
    <string name="name">Enter Your Name </string>
    <string name="email">Email Address</string>
    <string name="address"> Full Address</string>
    <string name="phone">Phone Number</string>
    <string name="q"> Food Quantity </string>
    <string name="pin">Pin Code</string>
    <string name="pay">Payment</string>
    <string name="e">Email</string>
    <string name="password">Password</string>
    <string name="p"> Email Password</string>
    <string name="card">Debit Card</string>
    <string name="number">5333 6195 2025 XXXX</string>
    <string name="month">MM/YY</string>
    <string name="c">Card CVC</string>
    <string name="cvc">CVC</string>
    <string name="m">Expire Date</string>
    <string name="life">Enjoy Your Food Enjoy Your Life</string>
    <string name="payment">Pay</string>
    <string name="s"> Payment Success</string>
    <string name="success">Payment Send Successfully !</string>
    <string name="amount">Enter the Amount</string>
    <string name="rupee">Amount</string>
    <string name="ok">OK</string>
    <string name="customer">Customer Name</string>
    <string name="ref">Ref Number</string>
    <string name="n">000077504033</string>
    <string name="bank">Payment Method </string>
    <string name="total">Total Amount</string>
    <string name="transfer">Bank Transfer</string>
    <string name="receive">Payment Receive</string>
    <string name="thank">Thank You</string>
    <string name="wait"> See You Soon Again</string>
    <string name="ahesan"> Shaikh Ahesan</string>
    <string name="ss">Success</string>
    <string name="ah">Shaikhahesan24@gmailcom</string>
    <string name="ahe">7276231346</string>
    <string name="x">XXXX</string>
</resources>