<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity6">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="780dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessLeaf">
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="200dp"
              android:src="@drawable/payment"
              android:contentDescription="@string/pin"/>
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/pay"
                  android:textAlignment="center"
                  android:textStyle="bold"
                  android:textSize="20sp"/>
                  <ImageView
                      android:layout_width="30dp"
                      android:layout_height="30dp"
                      android:src="@drawable/card"
                      android:layout_gravity="center_horizontal"
                      android:contentDescription="@string/name"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/e"
                      android:textStyle="bold"
                      android:layout_marginStart="40dp"
                      android:padding="5dp"/>
                     <EditText
                         android:layout_width="350dp"
                         android:layout_height="50dp"
                         android:background="@drawable/edt"
                         android:layout_gravity="center_horizontal"
                         android:drawableStart="@drawable/baseline_email_24"
                         android:drawablePadding="20dp"
                         android:hint="@string/email"
                         android:padding="15dp"
                         android:inputType="textEmailAddress"
                         android:ems="20"
                         tools:ignore="Autofill" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@drawable/edt"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/baseline_wifi_password_24"
                android:drawablePadding="20dp"
                android:hint="@string/p"
                android:padding="15dp"
                android:inputType="textPassword"
                android:ems="20"
                tools:ignore="Autofill" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@drawable/edt"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/baseline_currency_rupee_24"
                android:drawablePadding="20dp"
                android:hint="@string/amount"
                android:padding="15dp"
                android:inputType="number"
                android:ems="20"
                tools:ignore="Autofill" />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"
                android:textStyle="bold"
                android:layout_marginStart="40dp"
                android:padding="5dp"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@drawable/edt"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/baseline_credit_card_24"
                android:drawablePadding="20dp"
                android:hint="@string/number"
                android:padding="15dp"
                android:inputType="number"
                android:ems="20"
                tools:ignore="Autofill" />
            <TextView
              android:layout_marginEnd="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textStyle="bold"
                android:padding="5dp"/>
            <EditText
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:background="@drawable/edt"
                android:drawablePadding="15dp"
                android:hint="@string/cvc"
                android:padding="15dp"
                android:inputType="number"
                android:ems="20"
                android:layout_marginEnd="30dp"
                android:layout_gravity="end"
                tools:ignore="Autofill" />

              <androidx.appcompat.widget.AppCompatButton
                  android:layout_width="170dp"
                  android:layout_height="60dp"
                  android:background="@drawable/button"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/payment"
                  android:textStyle="italic"
                  android:layout_marginTop="20dp"
                  android:textColor="@color/white"
                  android:id="@+id/pay"/>
        </LinearLayout>
        <TextView
            android:layout_marginStart="25dp"
            android:layout_marginTop="595dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:layout_marginStart="25dp"
            android:layout_marginTop="625dp"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/edt"
            android:drawablePadding="15dp"
            android:hint="@string/month"
            android:padding="10dp"
            android:inputType="text|number"
            android:ems="20"
            tools:ignore="Autofill" />

    </androidx.cardview.widget.CardView>
</LinearLayout>