<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity7">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="520dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessLeaf">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/d"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/s"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/receive"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/line"
                android:scaleType="centerCrop"
                android:contentDescription="@string/p"/>
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/customer"
                       android:textStyle="bold"
                       android:id="@+id/customer"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="35dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/email"
                       android:textStyle="bold"
                       android:id="@+id/email"
                       android:layout_below="@id/customer"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="40dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/phone"
                       android:textStyle="bold"
                       android:id="@+id/phone"
                       android:layout_below="@id/email"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="40dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/ref"
                       android:textStyle="bold"
                       android:id="@+id/reffrence"
                       android:layout_below="@id/phone"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="40dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/bank"
                       android:textStyle="bold"
                       android:id="@+id/method"
                       android:layout_below="@id/reffrence"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="40dp"/>
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="30dp"
                       android:src="@drawable/line"
                       android:scaleType="centerCrop"
                       android:layout_below="@id/method"
                       android:id="@+id/img"
                       android:contentDescription="@string/p"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/total"
                       android:textStyle="bold"
                       android:id="@+id/amount"
                       android:layout_below="@id/img"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="40dp"/>
                   <TextView
                       android:id="@+id/name"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:text="@string/ahesan"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       tools:ignore="RelativeOverlap" />
                   <TextView
                       android:id="@+id/id"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       android:text="@string/ah"
                       android:layout_below="@id/name"
                       tools:ignore="RelativeOverlap" />
                   <TextView
                       android:id="@+id/number"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       android:text="@string/ahe"
                       android:layout_below="@id/email"
                       tools:ignore="RelativeOverlap" />
                   <TextView
                       android:id="@+id/bank"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:text="@string/n"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       android:layout_below="@id/number"
                       tools:ignore="RelativeOverlap" />
                   <TextView
                       android:id="@+id/transfer"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:text="@string/transfer"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="10dp"
                       android:layout_below="@id/bank"
                       tools:ignore="RelativeOverlap" />
                   <TextView
                       android:id="@+id/rupee"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="bold"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="10dp"
                       android:layout_marginEnd="50dp"
                       android:layout_below="@id/img"
                       android:text="@string/x"
                       tools:ignore="RelativeOverlap" />
               </RelativeLayout>
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
               android:src="@drawable/smile"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/s"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/thank"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wait"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
