<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   android:gravity="center_horizontal"
    android:layout_height="190dp"
    android:layout_margin="20dp"
    tools:ignore="UseCompoundDrawables">

      <ImageView
          android:id="@+id/tick"
          android:layout_marginTop="20dp"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:src="@drawable/check"
          android:contentDescription="@string/bank"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ss"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/ok"/>
</LinearLayout>