<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity5">
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="10dp"
       app:cardUseCompatPadding="true"
       app:cardElevation="5dp">
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="230dp"
               android:contentDescription="@string/today"
               android:src="@drawable/delivery"/>
   </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/d"
                android:contentDescription="@string/food"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                 android:padding="5dp" />
            <EditText
                android:id="@+id/n"
                android:layout_marginTop="5dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:hint="@string/name"
                android:ems="20"
                android:background="@drawable/edt"
                android:padding="15dp"
                android:drawablePadding="20dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                tools:ignore="Autofill" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:ems="20"
                android:drawableStart="@drawable/baseline_email_24"
                android:background="@drawable/edt"
              android:padding="15dp"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/phone"
                android:ems="10"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:background="@drawable/edt"
               android:drawablePadding="20dp"
                android:inputType="number"
                android:padding="15dp"
                tools:ignore="Autofill" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/address"
                android:ems="30"
                android:background="@drawable/edt"
                android:drawableStart="@drawable/baseline_home_24"
                android:inputType="text"
                android:drawablePadding="20dp"
                android:padding="15dp"
                tools:ignore="Autofill" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/pin"
                android:ems="6"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:background="@drawable/edt"
               android:drawableStart="@drawable/baseline_location_on_24"
                android:inputType="number"

                tools:ignore="Autofill" />
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/q"
                android:ems="20"
                android:background="@drawable/edt"
                android:drawableStart="@drawable/baseline_fastfood_24"
                android:inputType="number"
                android:drawablePadding="20dp"
                android:padding="15dp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:id="@+id/next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="end"
       android:layout_margin="10dp"
        />
</LinearLayout>
