<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/second"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <RelativeLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Menu"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />
                   <androidx.cardview.widget.CardView
                       android:layout_alignEnd="@id/menu"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentEnd="true"
                      android:layout_marginEnd="10dp"
                       app:cardCornerRadius="45dp">
                       <ImageView
                           android:id="@+id/profile"
                           android:layout_width="30dp"
                           android:layout_height="30dp"
                           android:src="@drawable/john"
                           android:contentDescription="@string/enjoy"/>
                   </androidx.cardview.widget.CardView>
            </RelativeLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/chef"
                   android:textStyle="bold"
                   android:drawableEnd="@drawable/baseline_emoji_emotions_24"
                   android:layout_margin="20dp"
                   android:paddingEnd="10dp"
                   tools:ignore="RtlSymmetry,UseCompatTextViewDrawableXml" />
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/chef"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/foods"
                 android:textStyle="bold"
                android:layout_margin="20dp"  />
               <androidx.recyclerview.widget.RecyclerView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/first"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Promotion"
                android:textStyle="bold"
                android:layout_margin="20dp"/>
              <androidx.cardview.widget.CardView
                  android:layout_gravity="center_horizontal"
                  android:layout_width="380dp"
                  android:layout_height="160dp"
                  app:cardUseCompatPadding="true"
                  app:cardCornerRadius="10dp"
                  app:cardElevation="10dp">
                   <ImageView
                       android:layout_width="100dp"
                       android:layout_height="80dp"
                       android:src="@drawable/fre"
                       android:layout_gravity="end"
                       android:contentDescription="@string/food"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/today"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:layout_margin="15dp"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="60dp"
                      android:layout_marginStart="30dp"
                      android:text="@string/fries"
                      android:textSize="10sp"
                      android:textStyle="bold"
                      tools:ignore="SmallSp" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="82dp"
                         android:layout_marginStart="22dp"
                         android:text="@string/on"
                         android:textSize="10sp"
                         android:textStyle="bold"
                         tools:ignore="SmallSp" />
              </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textStyle="bold"
                android:layout_margin="20dp"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/s"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>